# legal-reference-extraction

./: .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  LICENSE.txt  Makefile  README.md  citation_styles.md  de_notes.md  nltk.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bench.yml  ci.yml  publish.yml  version-bump.yml
benchmarks/: README.md  adapter.py  datasets.py  diagnose.py  metrics.py  run.py  validate.py
benchmarks/fixtures/: SOURCE  annotations.jsonl  documents.jsonl  html_documents.jsonl  markdown_documents.jsonl
benchmarks/schemas/: annotation.schema.json  document.schema.json
docs/: architecture_review.md  citation_styles.md  ecosystem_comparison.md  output_format_recommendation.md
docs/refactor2026/: architecture_review.md  benchmark_dataset_spec.md  ecosystem_comparison.md  implementation_plan.md  optimization_log.md  output_format_recommendation.md  transformer_training.md
refex/: __init__.py  extractor.py  models.py
refex/data/: file_number_codes.csv
refex/extractors/: case.py  law.py  law_dnc.py
refex/tests/: __init__.py  test_case_extractor.py  test_extractor.py  test_law_extractor.py  test_models.py
refex/tests/resources/: bgh_2018-08-16.html  bsg_2018-06-27.html  bsg_2018-06-27.txt  citation_styles.txt
refex/tests/resources/case/: file_numbers.txt
refex/tests/resources/law/: extract12.txt  extract13.txt  extract15.txt  extract16.txt  extract17.txt  extract19.txt  extract20.txt  extract24.txt  extract26.txt  extract4.txt  extract7.txt  extract9.txt
scripts/: export_bio.py  train_transformer.py
src/refex/: __init__.py  citations.py  compat.py  document.py  errors.py  extractor.py  models.py  orchestrator.py  protocols.py  resolver.py  serializers.py
src/refex/data/: law_book_codes.txt
src/refex/engines/: __init__.py  crf.py  regex.py  transformer.py
src/refex/extractors/: case.py  law.py  law_dnc.py
tests/: conftest.py  test_adapters.py  test_artikel.py  test_benchmark_metrics.py  test_case_extractor.py  test_citations.py  test_crf.py  test_document.py  test_edge_cases.py  test_extractor.py  test_format_fixtures.py  test_internals.py  test_law_extractor.py  test_law_legacy.py  test_models.py  test_orchestrator.py  test_resolver.py  test_serializers.py  test_transformer.py  test_unit_hints.py
tests/resources/: citation_styles.txt  law_book_codes.txt
tests/resources/case/: codes.txt
tests/resources/law/: extract10.txt  extract11.txt  extract14.txt  extract18.txt  extract2.txt  extract21.txt  extract22.txt  extract23.txt  extract25.txt  extract27.txt  extract3.txt  extract5.txt  extract6.txt  extract8.txt
