[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-reference-extraction"
version = "0.6.0"
description = "Extract references from legal documents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Malte Ostendorff", email = "hello@openlegaldata.io"}]
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]
adapters = ["spacy>=3.0"]
ml = ["sklearn-crfsuite>=0.3", "transformers>=4.30", "torch>=2.0"]

[project.urls]
Homepage = "https://github.com/openlegaldata/legal-reference-extraction"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
refex = ["data/*.txt", "data/*.csv"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests requiring large model downloads or GPU (run with `-m slow`)",
]

[tool.coverage.run]
source = ["refex"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true
