[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-reference-extraction"
version = "0.6.0"
description = "Extract references from legal documents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Malte Ostendorff", email = "hello@openlegaldata.io"}]
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]
adapters = ["spacy>=3.0"]
crf = ["sklearn-crfsuite>=0.3"]
transformers = ["transformers>=4.48,<5.0", "torch>=2.0"]
training = [
    "wandb>=0.17",
    "seqeval>=1.2",
    "datasets>=2.14",
    "accelerate>=0.33",
]
all = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "spacy>=3.0",
    "sklearn-crfsuite>=0.3",
    "transformers>=4.48,<5.0",
    "torch>=2.0",
    "wandb>=0.17",
    "seqeval>=1.2",
    "datasets>=2.14",
    "accelerate>=0.33",
]

[project.urls]
Homepage = "https://github.com/openlegaldata/legal-reference-extraction"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
refex = ["data/*.txt", "data/*.csv"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests requiring large model downloads or GPU (run with `-m slow`)",
]

[tool.coverage.run]
source = ["refex"]

[tool.coverage.report]
# 75 is realistic with all optional deps installed: the ML engines
# (engines/crf.py, engines/transformer.py) have training + inference
# paths that can't be exercised in CI without benchmark data or
# downloaded model weights.  Raise the bar as those are covered.
fail_under = 75
show_missing = true
skip_empty = true
